--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   pull_to_refresh: ^2.0.0 #刷新
   cached_network_image: ^3.1.0  #图片缓存
   flutter_datetime_picker: ^1.5.0 # 时间选择
-
+  shared_preferences: ^0.5.7+3 # 存储
 dev_dependencies:
   flutter_test:
     sdk: flutter
