--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # cupertino_icons: ^1.0.2
   pull_to_refresh: ^2.0.0 #刷新
   cached_network_image: ^3.1.0  #图片缓存
   shared_preferences: ^2.0.7 # 存储
