--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   pull_to_refresh: ^2.0.0 #刷新
   cached_network_image: ^3.2.0  #图片缓存
   shared_preferences: ^2.0.7 # 存储
-  flutter_picker: ^2.0.2
+  flutter_picker: 2.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
