--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ homepage: https://github.com/YunFeng-Huang/flutter_xui.git
 # a `flutter run` or a `flutter make-host-app-editable`. It has no impact
 # on any other native host app that you embed your Flutter project into.
 environment:
-  sdk: '>=2.15.0 <3.0.0'
+  sdk: '>=3.0.0'
 
 dependencies:
   flutter:
@@ -30,7 +30,7 @@ dependencies:
   pull_to_refresh: ^2.0.0 #刷新
   cached_network_image: ^3.2.0  #图片缓存
   shared_preferences: ^2.0.7 # 存储
-  flutter_picker: ^2.0.2
+  flutter_picker: ^2.1.0
   path_provider: ^2.0.2 #获取路径
 dev_dependencies:
   flutter_test:
