--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ homepage: https://github.com/YunFeng-Huang/flutter_xui.git
 # a `flutter run` or a `flutter make-host-app-editable`. It has no impact
 # on any other native host app that you embed your Flutter project into.
 environment:
-  sdk: '>=3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
