--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   # cupertino_icons: ^1.0.2
-  pull_to_refresh: 2.0.0 #刷新
-  cached_network_image: 3.2.0  #图片缓存
-  shared_preferences: 2.0.7 # 存储
-  flutter_picker: 2.1.0
-  path_provider: 2.0.2 #获取路径
-  logger: 1.4.0 #日志
-  url_launcher: 6.1.6 #跳转、唤起原生能力
+  pull_to_refresh: ^2.0.0 #刷新
+  cached_network_image: ^3.2.0  #图片缓存
+  shared_preferences: ^2.0.7 # 存储
+  flutter_picker: ^2.1.0
+  path_provider: ^2.0.2 #获取路径
+  logger: ^1.4.0 #日志
+  url_launcher: ^6.1.6 #跳转、唤起原生能力
 
 dev_dependencies:
   flutter_test:
